# pqc-readiness-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/mock_enterprise_app/: .pqc-scanner-ignore.yml  README.md  auth_service.py  jwt_config.json  nginx.conf  package.json  requirements.txt  terraform.tf
reports/mock_enterprise_app/: baseline_diff.json  crypto_inventory.json  pqc_findings.sarif  pqc_readiness_report.md  risk_summary.csv
src/pqc_scanner/: __init__.py  baseline.py  cli.py  models.py  reports.py  rules.py  scanner.py  scoring.py  suppressions.py
src/pqc_scanner/rules/: default_rules.yml
tests/: test_cli.py  test_reports.py  test_rules.py  test_scanner.py
